<resources>
    <string name="app_name">Payment</string>
    <string name="amount_required">Amount*</string>
    <string name="required_field">required field</string>
    <string name="error_stripe_client_secret_required">Client secret required</string>
    <string name="payment_success">Payment succeeded</string>
    <string name="payment_failed">Payment failed</string>
    <string name="payment_thanks">Thanks for your support</string>
    <string name="braintree">Braintree</string>
    <string name="pay_with">Pay With?</string>
    <string name="stripe">Stripe</string>
    <string name="square">Square</string>
    <string name="m_pesa">M-Pesa</string>
    <string name="pay">Pay</string>
    <string name="payment_cancelled">Payment cancelled</string>
    <string name="network_failure">Network failure</string>
    <string name="currency">Currency</string>
    <string name="default_currency">USD</string>
    <string name="processing_payment">Processing payment…</string>
    <string name="mobile_number_required">Mobile number*</string>
</resources>