<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dest_main">

    <fragment
        android:id="@+id/dest_main"
        android:name="com.xently.payment.ui.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/main_fragment">
        <action
            android:id="@+id/stripe_pay"
            app:destination="@id/dest_stripe_pay" />
        <action
            android:id="@+id/braintree_pay"
            app:destination="@id/dest_braintree_pay" />
        <action
            android:id="@+id/square_pay"
            app:destination="@id/dest_square_pay" />
        <action
            android:id="@+id/mpesa_pay"
            app:destination="@id/dest_mpesa_pay" />
    </fragment>
    <fragment
        android:id="@+id/dest_stripe_pay"
        android:name="com.xently.payment.ui.stripe.StripeFragment"
        android:label="@string/stripe"
        tools:layout="@layout/stripe_fragment" >
        <argument
            android:name="amount"
            app:argType="float" />
    </fragment>
    <fragment
        android:id="@+id/dest_braintree_pay"
        android:name="com.xently.payment.ui.braintree.BraintreeFragment"
        android:label="@string/braintree"
        tools:layout="@layout/braintree_fragment" >
        <argument
            android:name="amount"
            app:argType="float" />
    </fragment>
    <fragment
        android:id="@+id/dest_square_pay"
        android:name="com.xently.payment.ui.square.SquareFragment"
        android:label="@string/square"
        tools:layout="@layout/square_fragment" >
        <argument android:name="amount"
            app:argType="float" />
    </fragment>
    <fragment
        android:id="@+id/dest_mpesa_pay"
        android:name="com.xently.payment.ui.mpesa.MpesaFragment"
        android:label="@string/m_pesa"
        tools:layout="@layout/mpesa_fragment" >
        <argument
            android:name="amount"
            app:argType="float" />
    </fragment>
</navigation>