<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.MainFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppTheme.AppBar"
            app:layout_constraintBottom_toTopOf="@id/amount_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppTheme.AppBar.Toolbar"
                app:popupTheme="@style/ThemeOverlay.AppTheme.Toolbar.Popup">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="start|center_vertical"
                    android:text="@string/app_name"
                    android:textAppearance="?attr/textAppearanceHeadline5" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/amount_required"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/title"
            app:layout_constraintEnd_toStartOf="@id/currency_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currency_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/currency"
            android:labelFor="@id/currency"
            app:errorEnabled="true"
            app:helperText="defaults to USD"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toBottomOf="@id/amount_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/amount_container"
            app:layout_constraintTop_toTopOf="@id/amount_container">

            <AutoCompleteTextView
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/pay_with"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintBottom_toTopOf="@id/stripe"
            app:layout_constraintStart_toStartOf="@id/amount_container"
            app:layout_constraintTop_toBottomOf="@id/amount_container" />

        <Button
            android:id="@+id/stripe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/stripe"
            app:layout_constraintBottom_toTopOf="@+id/braintree"
            app:layout_constraintEnd_toStartOf="@+id/square"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
            android:id="@+id/square"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/square"
            app:layout_constraintBottom_toBottomOf="@+id/stripe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/stripe"
            app:layout_constraintTop_toTopOf="@+id/stripe" />

        <Button
            android:id="@+id/braintree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/braintree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mpesa"
            app:layout_constraintStart_toStartOf="@+id/stripe"
            app:layout_constraintTop_toBottomOf="@+id/stripe" />

        <Button
            android:id="@+id/mpesa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/m_pesa"
            app:layout_constraintBottom_toBottomOf="@+id/braintree"
            app:layout_constraintEnd_toEndOf="@+id/square"
            app:layout_constraintStart_toEndOf="@+id/braintree"
            app:layout_constraintTop_toTopOf="@+id/braintree" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>